:white_check_mark: feign 안전장치 추가 및 테스트코드 보완